jump-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: jump
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: jump
  selector:
    app: jump
    part-of: jump
---
